cmake: Add testing ...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,4 +35,5 @@ file(COPY_FILE ${CMAKE_CURRENT_BINARY_DIR}/.clangd ${CMAKE_CURRENT_SOURCE_DIR}/.
 find_path (SYSTEM_USR_DIR "stdlib.h")
 include_directories (${SYSTEM_USR_DIR})
 
+enable_testing ()
 add_subdirectory (src)
