--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,7 @@ foreach( name ${BASENAMES_IDIOMATIC_EXAMPLES} )
     endif()
     target_link_libraries(${name} catch2)
     add_dependencies(${name} catch2)
+    add_test (NAME ${name} COMMAND ${name})
     if(DEFINED CMAKE_CXX_CLANG_TIDY)
         set_target_properties(${name} PROPERTIES CXX_CLANG_TIDY "${CMAKE_CXX_CLANG_TIDY};--checks;-bugprone-chained-comparison")
     endif()
