Update to clang 21.1.8

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,8 @@ foreach( name ${BASENAMES_IDIOMATIC_EXAMPLES} )
     else()
         add_executable(${name} ${name}.cpp)
     endif()
+    target_compile_options(${name} PUBLIC "${cpp_basics_CXX_FLAGS}")
+    target_link_options(${name} PUBLIC "${cpp_basics_EXE_LINKER_FLAGS}")
     target_link_libraries(${name} catch2)
     add_dependencies(${name} catch2)
     add_test (NAME ${name} COMMAND ${name})
